comment & blog spacing/font fixes

--- a/root/static/css/blog.css
+++ b/root/static/css/blog.css
@@ -13,7 +13,7 @@
 		margin-bottom: 1.4em;
 	}
 	.blog-content p { 
-		font-size: 13px;
+		font-size: 1.05em;
 		line-height: 1.55;		
 	}	
 	.blog-content .block { 
